# cmake-pch-boost-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pch.h
app/: CMakeLists.txt
app/src/: main.cpp
pkg/: CMakeLists.txt
pkg/ext/boost/: CMakeLists.txt
pkg/int/: CMakeLists.txt
pkg/int/foobar/: CMakeLists.txt  foobar.cpp  foobar.h
pkg/int/foobar/src/: foobar.cpp
pkg/int/foobar/tests/: CMakeLists.txt  foobar_test.cpp
pkg/int/inc/foobar/: foobar.h
